--- a/static/index.html
+++ b/static/index.html
@@ -21,23 +21,7 @@
       </div>
     </div>
     <div class="container" style="margin-top:100px;">
-      <div class="col-md-12">
-        <div class="panel panel-default room" ng-controller="RoomCtrl">
-          <div class="panel-heading room-header">myChatApp</div>
-          <div class="panel-body room-content">
-            <div class="list-group messages" auto-scroll-to-bottom>
-              <div class="list-group-item message" ng-repeat="message in messages track by $index">
-                某某: {{message}}
-              </div>
-            </div>
-            <form class="message-creator" ng-controller="MessageCreatorCtrl">
-              <div class="form-group">
-                <textarea required class="form-control message-input" ng-model="newMessage" ctrl-enter-break-line="createMessage()" placeholder="Ctrl+Enter to quick send"></textarea>
-              </div>
-            </form>
-          </div>
-        </div>
-      </div>
+      <div class="row" ng-view></div>
     </div>
     <script type="text/javascript" src="/functions.js"></script>
     <script type="text/javascript" src="/services/socket.js"></script>
